--- a/config/sac_trainer_config.yaml
+++ b/config/sac_trainer_config.yaml
@@ -1,13 +1,13 @@
 default:
     trainer: sac
-    batch_size: 10 #128
-    buffer_size: 400 #50000
+    batch_size: 128
+    buffer_size: 50000
     buffer_init_steps: 0
     hidden_units: 128
     init_entcoef: 1.0
     learning_rate: 3.0e-4
     learning_rate_schedule: constant
-    max_steps: 5.0e4
+    max_steps: 5.0e5
     memory_size: 256
     normalize: false
     num_update: 1
